--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "eu.jeroensomhorst.domoticz",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "compatibility": ">=1.5.0",
   "sdk": 2,
   "name": {
@@ -23,7 +23,19 @@
     "email": "j.somhorst@gmail.com"
   },
   "capabilities":{
-
+    "fan_speed": {
+      "type" : "number",
+      "title" : {
+        "en": "Fanspeed",
+        "nl": "Ventilator snelheid"
+      },
+      "getable": true,
+      "setable": false,
+      "units": {
+        "en": "RPM",
+        "nl": "RPM"
+      }
+    }
   },
   "drivers": [
     {
