Added type Usage subType Electric

--- a/app.json
+++ b/app.json
@@ -96,5 +96,12 @@
 
       ]
     }
-]
+  ],
+  "contributing": {
+    "donate": {
+      "paypal": {
+        "username": "j.somhorst@gmail.com"
+      }
+    }
+  }
 }
